<resources>
    <string name="app_name">Simple TODO List</string>
    <string name="page_1_title">Simple ToDo</string>
    <string name="page_2_title">Edit Item</string>
    <string name="add">ADD</string>
    <string name="add_item">Add a new item...</string>
    <string name="edit_title">Task Name</string>
    <string name="edit_date">Due Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_note">Take some note</string>
    <string name="edit">EDIT</string>
</resources>
